--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/db_libreria
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 spring.jpa.show-sql: true
+
+spring.servlet.multipart.max-file-size=1MB
+spring.servlet.multipart.max-request-size=1MB
+spring.http.multipart.enabled=false
